--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 
   width: 30%;
 
-  padding: auto;
+  padding: 0;
 
   margin: auto;
   
@@ -36,7 +36,7 @@ body {
  
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
-  padding: auto;
+  padding: 0;
 }
 
 h3 {
@@ -52,6 +52,10 @@ h3 {
 
   width: 100%;
   height: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 a:visited {
