--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,23 @@
 body {
   /* styling body element */
-  grid-template-columns: 1fr 2fr;
+  border-style: solid;
+  
+  width: 40%;
 
-  box-sizing: border-box;
-
-  border: solid;
-
-  width: 30%;
+  margin: auto;
+ 
+  max-width: 50ch;
 
   padding: 0;
 
-  margin: auto;
-  
-  max-width: 85ch;
+  text-align: left;
 
-  gap: 1em;
+  display: block;
 }
 
 .single-card {
   /* styling single card */ 
   display: block;
-
-  align-items: center;
-  
-  justify-content: center;
-
-  width: 100%;
-  height: 100%;
-
-  margin: auto;
 
   overflow-wrap: break-word;
 
@@ -36,7 +25,7 @@ body {
  
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
-  padding: 0;
+  padding: 1rem;
 }
 
 h3 {
@@ -55,6 +44,7 @@ h3 {
 }
 
 a {
+  /* added no text-decoration */
   text-decoration: none;
 }
 
