--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,14 @@ body {
 
   background-color: hsl(217, 23%, 88%);
  
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: 'Antonio', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
   padding: 1rem;
+}
+
+p {
+  /* added font-family for paragraph */
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 h3 {
