--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,21 @@
 body {
   /* styling body element */
-  border-style: solid;
-  
   width: max-content;
 
   margin: auto;
+  margin-top: 9rem;
  
-  max-width: 40ch;
-
-  padding: 0;
+  max-width: max-content;
 
   text-align: left;
 
   display: block;
+
+  background-image: linear-gradient(100deg,hsl(268, 67%, 24%), hsl(76, 82%, 56%));
+
+  justify-content: center;
+
+  line-height: 1.5;
 }
 
 .single-card {
@@ -25,7 +28,17 @@ body {
  
   font-family: 'Antonio', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
-  padding: 1rem;
+  padding: 2rem;
+
+  margin-top: 5rem;
+  margin: auto;
+
+  max-width: 50ch;
+
+  justify-content: center;
+
+  border-style: double;
+  border-radius: 2rem;
 }
 
 p {
@@ -60,23 +73,14 @@ a:visited {
   padding: 0.5rem 1rem;
   margin: auto;
   width: max-content;
-  
-  text-decoration: none;
-  color: hsl;
-  background-color: hsl(297, 80%, 41%));
-  border-radius: .5rem;
-  border-style: double;
-  display: block;
 }
 
 a:hover {
   /* added a hover to the link */
-  background-color: #a0632a;
   color: #a0632a;
 }
 
 a:active {
   /* added a color when link is clicked */
   color: #ebb94f;
-  background-color: hsl(347, 98%, 55%);
 }
