made changes here in index.html & CSS  to ensure the entire card is clickable

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,13 @@ body {
   border-radius: 2rem;
 }
 
+main {
+  /* styling main element */
+  width: fit-content;
+
+  margin: auto;
+}
+
 p {
   /* added font-family for paragraph */
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
